# vestas_vault

./: .env.example  .gitignore  APP_ARCHITECTURE_PROPOSAL.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PHASE_1_CHECKLIST.md  PRD.md  PRD_REVIEW_SUMMARY.md  README.md  SETUP_GUIDE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: router.py  (+12 more)
backend/app/models/: __init__.py  account.py  fixed_expense.py  holding.py  other_income.py  planned_fixed_expense.py  planned_spending.py  scenario.py  social_security.py  tax_config.py
backend/app/repositories/: __init__.py  account_repository.py  holding_repository.py  other_income_repository.py  planned_spending_repository.py  scenario_repository.py  social_security_repository.py  tax_config_repository.py
backend/app/schemas/: __init__.py  account.py  fixed_expense.py  holding.py  other_income.py  planned_fixed_expense.py  planned_spending.py  scenario.py  social_security.py  tax_config.py
backend/app/services/: __init__.py  account_service.py  asset_projection_service.py  holding_service.py  other_income_service.py  planned_spending_service.py  retirement_scenario_service.py  scenario_service.py  social_security_service.py  tax_config_service.py
backend/app/utils/: __init__.py  fra_calculator.py
backend/scripts/: __init__.py  bootstrap_accounts.example.csv  bootstrap_accounts.py  bootstrap_holdings.example.csv  bootstrap_holdings.py
backend/tests/: conftest.py  test_account_repository.py  test_account_service.py  test_accounts_api.py
(+56 files in other folders)
